# Cookfolio-AI-Services

./: README.md  pyproject.toml
_proc/: index.ipynb  nbdev.yml
app/: agents.py  llm.py  models.py
cookfollio_ai_services/: _modidx.py
