[project]
name="cookfollio-ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "deepl>=1.22.0",
    "fastapi>=0.116.1",
    "ingredient-slicer>=1.2.21",
    "ipykernel>=6.30.0",
    "langdetect>=1.0.9",
    "langfuse>=3.2.1",
    "litellm>=1.74.8",
    "mlflow>=3.1.4",
    "pillow>=11.3.0",
    "recipe-scrapers>=15.8.0",
]

[dependency-groups]
dev = [
    "nbdev>=2.4.5",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
]
